Preparando nova versão com maior flexibilidade na configuração de queries